Add container, elements and header elements

--- a/index.html
+++ b/index.html
@@ -3,7 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Dashboard</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="header">
+        <img src="" alt="magnifying glass icon" class="icon" id="search" />
+        <input type="search" />
+        <img
+          src=""
+          alt="notification bell icon"
+          class="icon"
+          id="notification"
+        />
+        <img src="" alt="profile picture" id="profile-picture" />
+        <div id="user-name">Max Mustermann</div>
+      </div>
+      <div class="nav"></div>
+      <div class="sidebar div projects div announcements"></div>
+      <div class="trending"></div>
+    </div>
+  </body>
 </html>
