Fix sidebar div class
I created the divs using Emmet and I must've spelled it put wrong somehow.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         <div id="user-name">Max Mustermann</div>
       </div>
       <div class="nav"></div>
-      <div class="sidebar div projects div announcements"></div>
+      <div class="sidebar"></div>
+      <div class="projects"></div>
+      <div class="announcements"></div>
       <div class="trending"></div>
     </div>
   </body>
