--- a/index.html
+++ b/index.html
@@ -20,7 +20,18 @@
         <div id="user-name">Max Mustermann</div>
       </div>
       <div class="nav"></div>
-      <div class="sidebar"></div>
+      <div class="sidebar">
+        <div id="logo"><h1>Dashboard</h1></div>
+        <div id="home">Home</div>
+        <div id="profile">Profile</div>
+        <div id="messages">Messages</div>
+        <div id="history">History</div>
+        <div id="tasks">Tasks</div>
+        <div id="communities">Communities</div>
+        <div id="settings">Settings</div>
+        <div id="support">Support</div>
+        <div id="privacy">Privacy</div>
+      </div>
       <div class="projects"></div>
       <div class="announcements"></div>
       <div class="trending"></div>
