Add div to sidebar
To make an empty space between the communities and the settings element

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <div id="history">History</div>
         <div id="tasks">Tasks</div>
         <div id="communities">Communities</div>
+        <div></div>
         <div id="settings">Settings</div>
         <div id="support">Support</div>
         <div id="privacy">Privacy</div>
