--- a/index.html
+++ b/index.html
@@ -33,7 +33,72 @@
         <div id="support">Support</div>
         <div id="privacy">Privacy</div>
       </div>
-      <div class="projects"></div>
+      <div class="projects">
+        <h3>Your Projects</h3>
+        <div class="card">
+          <h4>Super cool Project</h4>
+          <p>
+            Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh
+            erat, id facilisis felis accumsan nec.
+          </p>
+          <img src="" alt="star button" />
+          <img src="" alt="eye button" />
+          <img src="" alt="share button" />
+        </div>
+        <div class="card">
+          <h4>Less Cool Project</h4>
+          <p>
+            Nullam condimentum ipsum ut lectus vehicula consectetur. Quisque sed
+            dolor tincidunt, consectetur sapien et. facilisis dolor. Duis sem
+            purus, dignissim ut sapien In, varius pellentesquelacus.
+          </p>
+          <img src="" alt="star button" />
+          <img src="" alt="eye button" />
+          <img src="" alt="share button" />
+        </div>
+        <div class="card">
+          <h4>Impossible App</h4>
+          <p>
+            In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a
+            placerat velit sagittis id.
+          </p>
+          <img src="" alt="star button" />
+          <img src="" alt="eye button" />
+          <img src="" alt="share button" />
+        </div>
+        <div class="card">
+          <h4>Easy Peasy App</h4>
+          <p>
+            Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim urna
+            eget accumsan aliquam. Curabitur dignissim nisi in tortor commodo,
+            ac bibendum magna tincidunt.
+          </p>
+          <img src="" alt="star button" />
+          <img src="" alt="eye button" />
+          <img src="" alt="share button" />
+        </div>
+        <div class="card">
+          <h4>Ad Blocker</h4>
+          <p>
+            Quisque eget rutrum nisl. Nam augue justo, cursus vitae metus vel…
+            pharetra hendrerit teis. Aliduam sed malesuade eros.
+          </p>
+          <img src="" alt="star button" />
+          <img src="" alt="eye button" />
+          <img src="" alt="share button" />
+        </div>
+        <div class="card">
+          <h4>Money Maker</h4>
+          <p>
+            Praesent convallis, llbero quis congue elementum, nunc ante raucibus
+            sapien, ac scelerisque tortor ourus sit amet ex Pellentesque mollis
+            nec sem vel aliquam.
+          </p>
+          <img src="" alt="star button" />
+          <img src="" alt="eye button" />
+          <img src="" alt="share button" />
+        </div>
+      </div>
       <div class="announcements"></div>
       <div class="trending"></div>
     </div>
