Add font and logo symbol

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
+    />
     <title>Dashboard</title>
   </head>
   <body>
@@ -21,7 +25,10 @@
       </div>
       <div class="nav"></div>
       <div class="sidebar">
-        <div id="logo"><h1>Dashboard</h1></div>
+        <div id="logo">
+          <span class="material-symbols-outlined"> dashboard </span>
+          <h1>Dashboard</h1>
+        </div>
         <div id="home">Home</div>
         <div id="profile">Profile</div>
         <div id="messages">Messages</div>
