Add symbols to sidebar

--- a/index.html
+++ b/index.html
@@ -29,16 +29,43 @@
           <span class="material-symbols-outlined"> dashboard </span>
           <h1>Dashboard</h1>
         </div>
-        <div id="home">Home</div>
-        <div id="profile">Profile</div>
-        <div id="messages">Messages</div>
-        <div id="history">History</div>
-        <div id="tasks">Tasks</div>
-        <div id="communities">Communities</div>
+        <div id="home">
+          <span class="material-symbols-outlined"> home </span>
+          Home
+        </div>
+        <div id="profile">
+          <span class="material-symbols-outlined"> person </span>
+          Profile
+        </div>
+        <div id="messages">
+          <span class="material-symbols-outlined"> mail </span>
+          Messages
+        </div>
+        <div id="history">
+          <span class="material-symbols-outlined"> history </span>
+          History
+        </div>
+        <div id="tasks">
+          <span class="material-symbols-outlined"> task_alt </span>
+          Tasks
+        </div>
+        <div id="communities">
+          <span class="material-symbols-outlined"> groups </span>
+          Communities
+        </div>
         <div></div>
-        <div id="settings">Settings</div>
-        <div id="support">Support</div>
-        <div id="privacy">Privacy</div>
+        <div id="settings">
+          <span class="material-symbols-outlined"> settings </span>
+          Settings
+        </div>
+        <div id="support">
+          <span class="material-symbols-outlined"> help </span>
+          Support
+        </div>
+        <div id="privacy">
+          <span class="material-symbols-outlined"> verified_user </span>
+          Privacy
+        </div>
       </div>
       <div class="projects">
         <h3>Your Projects</h3>
