Replace img with icons in header

--- a/index.html
+++ b/index.html
@@ -12,14 +12,9 @@
   <body>
     <div class="container">
       <div class="header">
-        <img src="" alt="magnifying glass icon" class="icon" id="search" />
+        <span class="material-symbols-outlined"> search </span>
         <input type="search" />
-        <img
-          src=""
-          alt="notification bell icon"
-          class="icon"
-          id="notification"
-        />
+        <span class="material-symbols-outlined"> notifications </span>
         <img src="" alt="profile picture" id="profile-picture" />
         <div id="user-name">Max Mustermann</div>
       </div>
