Add profile picture

--- a/index.html
+++ b/index.html
@@ -14,8 +14,13 @@
       <div class="header">
         <span class="material-symbols-outlined"> search </span>
         <input type="search" />
+        <div></div>
         <span class="material-symbols-outlined"> notifications </span>
-        <img src="" alt="profile picture" id="profile-picture" />
+        <img
+          src="https://avatars.dicebear.com/api/miniavs/msdfxyssfv.svg"
+          alt="profile picture"
+          id="profile-picture"
+        />
         <div id="user-name">Max Mustermann</div>
       </div>
       <div class="nav"></div>
