--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           alt="profile picture"
           id="profile-picture"
         />
-        <div id="user-name">Max Mustermann</div>
+        <div id="user-name">Morgan Oakley</div>
       </div>
       <div class="nav"></div>
       <div class="sidebar">
