Add navbar content

--- a/index.html
+++ b/index.html
@@ -23,7 +23,18 @@
         />
         <div id="user-name">Morgan Oakley</div>
       </div>
-      <div class="nav"></div>
+      <div class="nav">
+        <img
+          src="https://avatars.dicebear.com/api/miniavs/msdfxyssfv.svg"
+          alt="profile picture"
+          id="profile-picture-large"
+        />
+        <div>
+          <p>Hi there,</p>
+          <p>Morgan Oakley (@morgan)</p>
+        </div>
+        <button>New</button><button>Upload</button><button>Share</button>
+      </div>
       <div class="sidebar">
         <div id="logo">
           <span class="material-symbols-outlined"> dashboard </span>
