--- a/index.html
+++ b/index.html
@@ -144,7 +144,34 @@
           <img src="" alt="share button" />
         </div>
       </div>
-      <div class="announcements"></div>
+      <div class="announcements">
+        <h3>Announcements</h3>
+        <div class="card">
+          <div>
+            <h5>Site Maintenance</h5>
+            <p>
+              Vestibulum condimentum tellus lacus, in accumsan elit maximus ac.
+              Donec hendrerit sodales congue...
+            </p>
+          </div>
+          <hr />
+          <div>
+            <h5>Community Share Day</h5>
+            <p>
+              Nam vel lectus tincidunt, rutrum nulla eu, ornare libero. Aliquam
+              dictum accumsan porttitot...
+            </p>
+          </div>
+          <hr />
+          <div>
+            <h5>Updated Privacy Policy</h5>
+            <p>
+              Phasellus efficitur nisi eget elit consectetur, eget condimentum
+              ante auctor. Cras fringilla sagittis sem in mattis...
+            </p>
+          </div>
+        </div>
+      </div>
       <div class="trending"></div>
     </div>
   </body>
