Add trending content

--- a/index.html
+++ b/index.html
@@ -172,7 +172,43 @@
           </div>
         </div>
       </div>
-      <div class="trending"></div>
+      <div class="trending">
+        <h3>Trending</h3>
+        <div class="card">
+          <img
+            src="https://avatars.dicebear.com/api/miniavs/lners.svg"
+            alt="profile picture"
+          />
+          <div>
+            <h6>@tegan</h6>
+            <p>World Peace Builder</p>
+          </div>
+          <img
+            src="https://avatars.dicebear.com/api/miniavs/lnasaasdwv.svg"
+            alt="profile picture"
+          />
+          <div>
+            <h6>@morgan</h6>
+            <p>Super Cool Project</p>
+          </div>
+          <img
+            src="https://avatars.dicebear.com/api/miniavs/sdfdswew.svg"
+            alt="profile picture"
+          />
+          <div>
+            <h6>@kendall</h6>
+            <p>Life Changing App</p>
+          </div>
+          <img
+            src="https://avatars.dicebear.com/api/miniavs/sd.svg"
+            alt="profile picture"
+          />
+          <div>
+            <h6>@alex</h6>
+            <p>No Traffic Maker</p>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
