Replace project buttons with icons

--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
             Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh
             erat, id facilisis felis accumsan nec.
           </p>
-          <img src="" alt="star button" />
-          <img src="" alt="eye button" />
-          <img src="" alt="share button" />
+          <span class="material-symbols-outlined"> grade </span>
+          <span class="material-symbols-outlined"> bookmark </span>
+          <span class="material-symbols-outlined"> share </span>
         </div>
         <div class="card">
           <h4>Less Cool Project</h4>
@@ -97,9 +97,9 @@
             dolor tincidunt, consectetur sapien et. facilisis dolor. Duis sem
             purus, dignissim ut sapien In, varius pellentesquelacus.
           </p>
-          <img src="" alt="star button" />
-          <img src="" alt="eye button" />
-          <img src="" alt="share button" />
+          <span class="material-symbols-outlined"> grade </span>
+          <span class="material-symbols-outlined"> bookmark </span>
+          <span class="material-symbols-outlined"> share </span>
         </div>
         <div class="card">
           <h4>Impossible App</h4>
@@ -107,9 +107,9 @@
             In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a
             placerat velit sagittis id.
           </p>
-          <img src="" alt="star button" />
-          <img src="" alt="eye button" />
-          <img src="" alt="share button" />
+          <span class="material-symbols-outlined"> grade </span>
+          <span class="material-symbols-outlined"> bookmark </span>
+          <span class="material-symbols-outlined"> share </span>
         </div>
         <div class="card">
           <h4>Easy Peasy App</h4>
@@ -118,9 +118,9 @@
             eget accumsan aliquam. Curabitur dignissim nisi in tortor commodo,
             ac bibendum magna tincidunt.
           </p>
-          <img src="" alt="star button" />
-          <img src="" alt="eye button" />
-          <img src="" alt="share button" />
+          <span class="material-symbols-outlined"> grade </span>
+          <span class="material-symbols-outlined"> bookmark </span>
+          <span class="material-symbols-outlined"> share </span>
         </div>
         <div class="card">
           <h4>Ad Blocker</h4>
@@ -128,9 +128,9 @@
             Quisque eget rutrum nisl. Nam augue justo, cursus vitae metus vel…
             pharetra hendrerit teis. Aliduam sed malesuade eros.
           </p>
-          <img src="" alt="star button" />
-          <img src="" alt="eye button" />
-          <img src="" alt="share button" />
+          <span class="material-symbols-outlined"> grade </span>
+          <span class="material-symbols-outlined"> bookmark </span>
+          <span class="material-symbols-outlined"> share </span>
         </div>
         <div class="card">
           <h4>Money Maker</h4>
@@ -139,9 +139,9 @@
             sapien, ac scelerisque tortor ourus sit amet ex Pellentesque mollis
             nec sem vel aliquam.
           </p>
-          <img src="" alt="star button" />
-          <img src="" alt="eye button" />
-          <img src="" alt="share button" />
+          <span class="material-symbols-outlined"> grade </span>
+          <span class="material-symbols-outlined"> bookmark </span>
+          <span class="material-symbols-outlined"> share </span>
         </div>
       </div>
       <div class="announcements">
