Wrap project buttons in div

--- a/index.html
+++ b/index.html
@@ -86,9 +86,11 @@
             Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh
             erat, id facilisis felis accumsan nec.
           </p>
-          <span class="material-symbols-outlined"> grade </span>
-          <span class="material-symbols-outlined"> bookmark </span>
-          <span class="material-symbols-outlined"> share </span>
+          <div class="buttons">
+            <span class="material-symbols-outlined"> grade </span>
+            <span class="material-symbols-outlined"> bookmark </span>
+            <span class="material-symbols-outlined"> share </span>
+          </div>
         </div>
         <div class="card">
           <h4>Less Cool Project</h4>
@@ -97,9 +99,11 @@
             dolor tincidunt, consectetur sapien et. facilisis dolor. Duis sem
             purus, dignissim ut sapien In, varius pellentesquelacus.
           </p>
-          <span class="material-symbols-outlined"> grade </span>
-          <span class="material-symbols-outlined"> bookmark </span>
-          <span class="material-symbols-outlined"> share </span>
+          <div class="buttons">
+            <span class="material-symbols-outlined"> grade </span>
+            <span class="material-symbols-outlined"> bookmark </span>
+            <span class="material-symbols-outlined"> share </span>
+          </div>
         </div>
         <div class="card">
           <h4>Impossible App</h4>
@@ -107,9 +111,11 @@
             In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a
             placerat velit sagittis id.
           </p>
-          <span class="material-symbols-outlined"> grade </span>
-          <span class="material-symbols-outlined"> bookmark </span>
-          <span class="material-symbols-outlined"> share </span>
+          <div class="buttons">
+            <span class="material-symbols-outlined"> grade </span>
+            <span class="material-symbols-outlined"> bookmark </span>
+            <span class="material-symbols-outlined"> share </span>
+          </div>
         </div>
         <div class="card">
           <h4>Easy Peasy App</h4>
@@ -118,9 +124,11 @@
             eget accumsan aliquam. Curabitur dignissim nisi in tortor commodo,
             ac bibendum magna tincidunt.
           </p>
-          <span class="material-symbols-outlined"> grade </span>
-          <span class="material-symbols-outlined"> bookmark </span>
-          <span class="material-symbols-outlined"> share </span>
+          <div class="buttons">
+            <span class="material-symbols-outlined"> grade </span>
+            <span class="material-symbols-outlined"> bookmark </span>
+            <span class="material-symbols-outlined"> share </span>
+          </div>
         </div>
         <div class="card">
           <h4>Ad Blocker</h4>
@@ -128,9 +136,11 @@
             Quisque eget rutrum nisl. Nam augue justo, cursus vitae metus vel…
             pharetra hendrerit teis. Aliduam sed malesuade eros.
           </p>
-          <span class="material-symbols-outlined"> grade </span>
-          <span class="material-symbols-outlined"> bookmark </span>
-          <span class="material-symbols-outlined"> share </span>
+          <div class="buttons">
+            <span class="material-symbols-outlined"> grade </span>
+            <span class="material-symbols-outlined"> bookmark </span>
+            <span class="material-symbols-outlined"> share </span>
+          </div>
         </div>
         <div class="card">
           <h4>Money Maker</h4>
@@ -139,9 +149,11 @@
             sapien, ac scelerisque tortor ourus sit amet ex Pellentesque mollis
             nec sem vel aliquam.
           </p>
-          <span class="material-symbols-outlined"> grade </span>
-          <span class="material-symbols-outlined"> bookmark </span>
-          <span class="material-symbols-outlined"> share </span>
+          <div class="buttons">
+            <span class="material-symbols-outlined"> grade </span>
+            <span class="material-symbols-outlined"> bookmark </span>
+            <span class="material-symbols-outlined"> share </span>
+          </div>
         </div>
       </div>
       <div class="announcements">
