Unwrap sidebar elements give blank space id

--- a/index.html
+++ b/index.html
@@ -36,47 +36,27 @@
         <button>New</button><button>Upload</button><button>Share</button>
       </div>
       <div class="sidebar">
-        <div id="logo">
-          <span class="material-symbols-outlined"> dashboard </span>
-          <h1>Dashboard</h1>
-        </div>
-        <div id="home">
-          <span class="material-symbols-outlined"> home </span>
-          Home
-        </div>
-        <div id="profile">
-          <span class="material-symbols-outlined"> person </span>
-          Profile
-        </div>
-        <div id="messages">
-          <span class="material-symbols-outlined"> mail </span>
-          Messages
-        </div>
-        <div id="history">
-          <span class="material-symbols-outlined"> history </span>
-          History
-        </div>
-        <div id="tasks">
-          <span class="material-symbols-outlined"> task_alt </span>
-          Tasks
-        </div>
-        <div id="communities">
-          <span class="material-symbols-outlined"> groups </span>
-          Communities
-        </div>
-        <div></div>
-        <div id="settings">
-          <span class="material-symbols-outlined"> settings </span>
-          Settings
-        </div>
-        <div id="support">
-          <span class="material-symbols-outlined"> help </span>
-          Support
-        </div>
-        <div id="privacy">
-          <span class="material-symbols-outlined"> verified_user </span>
-          Privacy
-        </div>
+        <span class="material-symbols-outlined"> dashboard </span>
+        <h1>Dashboard</h1>
+        <span class="material-symbols-outlined"> home </span>
+        Home
+        <span class="material-symbols-outlined"> person </span>
+        Profile
+        <span class="material-symbols-outlined"> mail </span>
+        Messages
+        <span class="material-symbols-outlined"> history </span>
+        History
+        <span class="material-symbols-outlined"> task_alt </span>
+        Tasks
+        <span class="material-symbols-outlined"> groups </span>
+        Communities
+        <div id="blank-space"></div>
+        <span class="material-symbols-outlined"> settings </span>
+        Settings
+        <span class="material-symbols-outlined"> help </span>
+        Support
+        <span class="material-symbols-outlined"> verified_user </span>
+        Privacy
       </div>
       <div class="projects">
         <h3>Your Projects</h3>
